<?xml version="1.0"?>
<package>
  <name>imagepub</name>
  <version>0.0.0</version>
  <description>The Image Publisher Package (Image PipeLine)</description>

  <maintainer email="mayankm@iitk.ac.in">Mayank Mittal</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>

</package>
